data/derived/comb/progs/unify/prog4412.ml.out
Characters 95-127:
  (s,t)::((i+j+s+t)/10, (i+j+s+t) mod 10) in
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type ('c * 'd) list
